--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".DetailActivity"></activity>
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDmWUm6Rkp1QORrMwJTOoFRV3XZZks4UtE"/>
     </application>
 
 </manifest>
